# photodraft

./: .gitignore  README.md  debug_avif_metadata.py  enhanced_debug_avif.py  generate_image_manifest.py  generate_manifest.py  image_manifest.schema.json  justfile  photo_manifest.schema.json  pyproject.toml  test_avif_manifest.py  test_image_manifest.json  test_notes_extraction.py  validate_manifest.py
memory-bank/: .clinerules.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
